--- a/index.html
+++ b/index.html
@@ -21,21 +21,111 @@
                 <li><a href="S'inscrire">S'inscrire</a></li>
             </ul>
         </nav>
+    </header>
+
+    <section id="recherche_hebergement">
         <div>
             <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
             <h2>En plein centre ville ou en pleine nature</h2>
         </div>
-        <div>
-            <nav>
-                <li><a href="icon"><i class="fas fa-map-marker-alt"></i></a></li>
-                <li><a href="searchbar"><input type="search"></a></li>
-                <li><a href="Rechercher">Rechercher</a></li>
-            </nav>
+        <div class="searchbar">
+            <i class="fas fa-map-marker-alt"></i>
+            <input type="search" placeholder="Marseille, France">
+            <p>Rechercher</p>
         </div>
-        <div>
+        <div id="filters">
+            <h3>Filtres</h3>
+            <div>
+                <i class="fas fa-money-bill-wave"></i>
+                <p>Économique</p>
+            </div>
+            <div>
+                <i class="fas fa-users"></i>
+                <p>Familial</p>
+            </div>
+            <div>
+                <i class="fas fa-heart"></i>
+                <p>Romantique</p>
+            </div>
+            <i class="fas fa-dog"></i>
+            <p>Animaux autorisés</p>
+        </div>
 
-        </div>
-    </header>
+        <i class="fas fa-info-circle"></i>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+    </section>
+
+    <section id="hebergements">
+        <h3>Hébergements à Marseille</h3>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement1.jpg"
+                alt="hebergement1">
+            <h4>Auberge la Cannebière</h4>
+            <p>Nuit à partir de 25€</p>
+            <span class="star">****</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement2.jpg"
+                alt="hebergement2">
+            <h4>Hôtel du port</h4>
+            <p>Nuit à partir de 52€</p>
+            <span class="star">*****</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement3.jpg"
+                alt="hebergement3">
+            <h4>Hôtel Les mouettes</h4>
+            <p>Nuit à partir de 76€</p>
+            <span class="star">****</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement4.jpg"
+                alt="hebergement4">
+            <h4>Hôtel de la mer/h4>
+                <p>Nuit à partir de 46€</p>
+                <span class="star">***</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement5.jpg"
+                alt="hebergement5">
+            <h4>Auberge Le Panier</h4>
+            <p>Nuit à partir de 23€</p>
+            <span class="star">****</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement6.jpg"
+                alt="hebergement6">
+            <h4>Hôtel Chez Amina</h4>
+            <p>Nuit à partir de 96€</p>
+            <span class="star">*****</span>
+        </article>
+    </section>
+    <section id="populaires">
+        <h3>Les plus populaires</h3>
+        <i class="fas fa-chart-line"></i>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/best1.jpg"
+                alt="populaire1">
+            <h4>Hôtel le soleil du matin</h4>
+            <p>Nuit à partir de 128€</p><br>
+            <span class="star">*****</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/best2.jpg"
+                alt="populaire2">
+            <h4>Au cœur de l'eau <br>
+                Chambres d'hôtes</h4>
+            <p>Nuit à partir de 71€</p><br>
+            <span class="star">****</span>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/best3.jpg"
+                alt="populaire3">
+            <h4>Hôtel Tout Bleu et Blanc</h4>
+            <p>Nuit à partir de 68€</p><br>
+            <span class="star">****</span>
+        </article>
+    </section>
 
 </body>
 
