last lines html

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <span class="star">*****</span>
         </article>
     </section>
+
     <section id="populaires">
         <h3>Les plus populaires</h3>
         <i class="fas fa-chart-line"></i>
@@ -126,6 +127,59 @@
             <span class="star">****</span>
         </article>
     </section>
+
+    <section id="activites">
+        <h3>Activités à Marseille</h3>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act1.jpg"
+                alt="activite1">
+            <h4>Vieux Port</h4>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act2.jpg"
+                alt="activite2">
+            <h4>Fort de Pomègues</h4>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act3.jpg"
+                alt="activite3">
+            <h4>Îles du Frioul</h4>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act4.jpg"
+                alt="activite4">
+            <h4>Parc National des Calanques</h4>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act5.jpg"
+                alt="activite5">
+            <h4>Notre-Dame-de-la-Garde</h4>
+        </article>
+        <article>
+            <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act6.jpg"
+                alt="activite6">
+            <h4>Parc Longchamp</h4>
+        </article>
+    </section>
+
+    <footer>
+        <div>
+            <h1>A propos</h1>
+            <p>Fonctionnement du site</p>
+            <p>Conditions générales de vente</p>
+            <p>Données et confidentialité</p>
+        </div>
+        <div>
+            <h1>Nos hébergements</h1>
+            <p>Charte qualité</p>
+            <p>Soumettre votre hôtel</p>
+        </div>
+        <div>
+            <h1>Assistance</h1>
+            <p>Centre d'aide</p>
+            <p>Nous contacter</p>
+        </div>
+    </footer>
 
 </body>
 
