--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Hébergements">Hébergements</a></li>
-                <li><a href="Activités">Activités</a></li>
-                <li><a href="S'inscrire">S'inscrire</a></li>
+                <li><a href="#hebergements">Hébergements</a></li>
+                <li><a href="#activites">Activités</a></li>
+                <li><a href="">S'inscrire</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
         <div class="searchbar">
             <i class="fas fa-map-marker-alt"></i>
             <input type="search" placeholder="Marseille, France">
-            <p>Rechercher</p>
+            <input type="button" value="Rechercher">
         </div>
         <div id="filters">
             <h3>Filtres</h3>
@@ -60,42 +60,42 @@
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement1.jpg"
                 alt="hebergement1">
-            <h4>Auberge la Cannebière</h4>
+            <h4><a href="">Auberge la Cannebière</a></h4>
             <p>Nuit à partir de 25€</p>
             <span class="star">****</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement2.jpg"
                 alt="hebergement2">
-            <h4>Hôtel du port</h4>
+            <h4><a href="">Hôtel du port</a></h4>
             <p>Nuit à partir de 52€</p>
             <span class="star">*****</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement3.jpg"
                 alt="hebergement3">
-            <h4>Hôtel Les mouettes</h4>
+            <h4><a href="">Hôtel Les mouettes</a></h4>
             <p>Nuit à partir de 76€</p>
             <span class="star">****</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement4.jpg"
                 alt="hebergement4">
-            <h4>Hôtel de la mer/h4>
-                <p>Nuit à partir de 46€</p>
-                <span class="star">***</span>
+            <h4><a href="">Hôtel de la mer</a></h4>
+            <p>Nuit à partir de 46€</p>
+            <span class="star">***</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement5.jpg"
                 alt="hebergement5">
-            <h4>Auberge Le Panier</h4>
+            <h4><a href="">Auberge Le Panier</a></h4>
             <p>Nuit à partir de 23€</p>
             <span class="star">****</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/hebergement6.jpg"
                 alt="hebergement6">
-            <h4>Hôtel Chez Amina</h4>
+            <h4><a href="">Hôtel Chez Amina</a></h4>
             <p>Nuit à partir de 96€</p>
             <span class="star">*****</span>
         </article>
@@ -107,22 +107,22 @@
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/best1.jpg"
                 alt="populaire1">
-            <h4>Hôtel le soleil du matin</h4>
+            <h4><a href="">Hôtel le soleil du matin</a></h4>
             <p>Nuit à partir de 128€</p><br>
             <span class="star">*****</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/best2.jpg"
                 alt="populaire2">
-            <h4>Au cœur de l'eau <br>
-                Chambres d'hôtes</h4>
+            <h4><a href="">Au cœur de l'eau <br>
+                    Chambres d'hôtes</a></h4>
             <p>Nuit à partir de 71€</p><br>
             <span class="star">****</span>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/hebergements/4_small/best3.jpg"
                 alt="populaire3">
-            <h4>Hôtel Tout Bleu et Blanc</h4>
+            <h4><a href="">Hôtel Tout Bleu et Blanc</a></h4>
             <p>Nuit à partir de 68€</p><br>
             <span class="star">****</span>
         </article>
@@ -133,49 +133,49 @@
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act1.jpg"
                 alt="activite1">
-            <h4>Vieux Port</h4>
+            <h4><a href="">Vieux Port</a></h4>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act2.jpg"
                 alt="activite2">
-            <h4>Fort de Pomègues</h4>
+            <h4><a href="">Fort de Pomègues</a></h4>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act3.jpg"
                 alt="activite3">
-            <h4>Îles du Frioul</h4>
+            <h4><a href="">Îles du Frioul</a></h4>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act4.jpg"
                 alt="activite4">
-            <h4>Parc National des Calanques</h4>
+            <h4><a href="">Parc National des Calanques</a></h4>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act5.jpg"
                 alt="activite5">
-            <h4>Notre-Dame-de-la-Garde</h4>
+            <h4><a href="">Notre-Dame-de-la-Garde</a></h4>
         </article>
         <article>
             <img src="/Users/maceo/Desktop/WorkPlace/Dev Web/Projet 2/Travaux/Reservia/images/activites/4_small/act6.jpg"
                 alt="activite6">
-            <h4>Parc Longchamp</h4>
+            <h4><a href="">Parc Longchamp</a></h4>
         </article>
     </section>
 
     <footer>
         <div>
-            <h1>A propos</h1>
+            <h3>A propos</h3>
             <p>Fonctionnement du site</p>
             <p>Conditions générales de vente</p>
             <p>Données et confidentialité</p>
         </div>
         <div>
-            <h1>Nos hébergements</h1>
+            <h3>Nos hébergements</h3>
             <p>Charte qualité</p>
             <p>Soumettre votre hôtel</p>
         </div>
         <div>
-            <h1>Assistance</h1>
+            <h3>Assistance</h3>
             <p>Centre d'aide</p>
             <p>Nous contacter</p>
         </div>
